[gd_scene load_steps=25 format=3 uid="uid://cfl65rha1p34a"]

[ext_resource type="Script" uid="uid://djrsnvcs4tjag" path="res://scripts/devil.gd" id="1_dn2kn"]
[ext_resource type="Shader" uid="uid://etgog26ndots" path="res://shaders/cat.gdshader" id="2_fvmev"]
[ext_resource type="Texture2D" uid="uid://d4iht4hpyvw7a" path="res://art/devil.png" id="2_okdpc"]
[ext_resource type="Texture2D" uid="uid://cbnu0v5lrwmvp" path="res://art/devil-outline.png" id="3_okdpc"]
[ext_resource type="Texture2D" uid="uid://cnmxdwi2t3dhm" path="res://art/blue-devil.png" id="3_yjn3n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yjn3n"]
shader = ExtResource("2_fvmev")
shader_parameter/flash_pct = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h4ldw"]
atlas = ExtResource("3_yjn3n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1y37"]
atlas = ExtResource("3_yjn3n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dwxd"]
atlas = ExtResource("3_yjn3n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3key"]
atlas = ExtResource("3_yjn3n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_trceg"]
atlas = ExtResource("2_okdpc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8y0u"]
atlas = ExtResource("2_okdpc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkv2x"]
atlas = ExtResource("2_okdpc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbj1t"]
atlas = ExtResource("2_okdpc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvmev"]
atlas = ExtResource("3_okdpc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjn3n"]
atlas = ExtResource("3_okdpc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwdco"]
atlas = ExtResource("3_okdpc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xdfg"]
atlas = ExtResource("3_okdpc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_pm3ni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4ldw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1y37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dwxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3key")
}],
"loop": true,
"name": &"blue",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8y0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkv2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbj1t")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvmev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjn3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwdco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xdfg")
}],
"loop": true,
"name": &"default_outline",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2f3dj"]
radius = 9.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eb6dy"]
radius = 18.0
height = 48.0

[sub_resource type="Animation" id="Animation_1xdfg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_pct")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fwdco"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_pct")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.15, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4ldw"]
_data = {
&"RESET": SubResource("Animation_1xdfg"),
&"flash": SubResource("Animation_fwdco")
}

[node name="devil" type="StaticBody2D" groups=["death"]]
scale = Vector2(9, 9)
collision_layer = 3
script = ExtResource("1_dn2kn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_yjn3n")
sprite_frames = SubResource("SpriteFrames_pm3ni")
animation = &"blue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_2f3dj")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_eb6dy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h4ldw")
}

[node name="atk_time" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="atk_interval" type="Timer" parent="."]

[connection signal="timeout" from="atk_time" to="." method="_on_atk_time_timeout"]
[connection signal="timeout" from="atk_interval" to="." method="_on_atk_interval_timeout"]
